fix overflowed link on article index

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -100,7 +100,7 @@ a[target="_blank"]:hover::after {
     max-width: 120px;
 }
 
-.article-share-link {
+.article-permalink a {
     word-break: break-all;
 }
 
